# espeak_ros

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
config/: espeak.yaml
include/espeak_ros/: espeak_node.h
launch/: espeak_node.launch
src/: espeak_node.cpp
