<?xml version="1.0"?>
<package format="2">
  <name>espeak_ros</name>
  <version>0.1.0</version>
  <description>ROS node wrapper for espeak.</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <author email="muhrix@gmail.com">Murilo FM</author>
  <author>Nathaniel Lewis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>libespeak-dev</depend>
  <depend>std_msgs</depend>
  <export>

  </export>
</package>
